# BOI_DL_website

./: BOI_DL_website.Rproj  _quarto.yml  index.qmd  setup.py
_site/: about.html  search.json
data/: cluster_moons.csv  cpi_series.csv  credit_small_sample.csv  dow_jones_data.csv  planar_data.csv
docs/: index.html  index.qmd  search.json  styles.css  temp.html
docs/topics/: convolution.html  credit_score.html  intro.html  logistic_regression.html  multi_layer_credit_score.html  optim_methods.html  python_workshop.html  single_layer_nn.html  single_layer_nn_classification.html  single_layer_nn_regression.html  temp.html
func_package/: backward_propagation.py  forward_propagation.py  model.py  optimization.py  plotting.py  pyproject.toml  tests.py  utils.py
func_package.egg-info/: PKG-INFO  SOURCES.txt
func_package/func_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
topics/: convolution.qmd  credit_score.qmd  intro.qmd  logistic_regression.rmd  multi_layer_credit_score.qmd  optim_methods.qmd  python_workshop.qmd  single_layer_nn.qmd  single_layer_nn.rmd  single_layer_nn_classification.qmd  single_layer_nn_regression.qmd  temp.qmd
topics/cnn/: convolution.qmd
topics/exercises/: bert_exercise.qmd  cnn_exercise.qmd  exercise_1.qmd  rnn_exercise.qmd
topics/multi_layer/: multi_layer_credit_score.qmd  optim_methods.qmd
topics/python_workshop/: python_workshop.qmd
topics/rnn/: rnn.qmd  rnn_cpi.qmd
topics/single_layer/: classification.qmd  regression.qmd  single_layer_credit_score.qmd
topics/transformers/: fine_tuning.qmd
(+16 files in other folders)
