[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "func_package"
version = "0.0.0"
description = "Local helpers for DL tutorials"
requires-python = ">=3.11"

# Tell setuptools that THIS directory is the package named "func_package"
[tool.setuptools]
packages = ["func_package"]

[tool.setuptools.package-dir]
func_package = "."
